--- a/src/main/resources/templates/addCategory.html
+++ b/src/main/resources/templates/addCategory.html
@@ -16,9 +16,7 @@
                 <input
                         class="form-control"
                         type="text"
-                        name="name"
-                        value="${category.name}"
-                >
+                        name="name">
                 <span class="text-danger" th:errors="${category.name}" ></span>
             </div>
             <button type="submit" class="btn btn-primary mt-1">Save</button>
