--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -50,6 +50,9 @@
                         <a class="dropdown-item" th:href="@{/logout}">Logout</a>
                     </div>
                 </div>
+                <li class="nav-item">
+                    <a class="btn btn-secondary"  sec:authorize="!isAuthenticated()" th:href="@{/login}">login</a>
+                </li>
             <ul>
         </div>
     </div>
